<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:background="@drawable/background_color">

        <ImageView
            android:id="@+id/value_pic"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="23dp"
            android:src="@mipmap/photo" />

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/value_pic"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="13dp"
            android:layout_toRightOf="@id/value_pic"
            android:text="苏大强"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_nickname"
            android:layout_alignLeft="@id/user_nickname"
            android:layout_marginTop="1dp"
            android:text="daqiang.su@gmail.com"
            android:textSize="14sp"
            android:textColor="#74747F" />

        <ImageView
            android:id="@+id/img_vip_lv"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_alignTop="@id/user_nickname"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@id/user_nickname"
            android:src="@mipmap/vip_silver" />

        <Button
            android:id="@+id/btn_clear_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/img_vip_lv"
            android:layout_marginRight="10dp"
            android:text="@string/clear_code"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="32dp"
            android:layout_below="@id/value_pic"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1024.22"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/label_user_balance"
                    android:textColor="#74747F"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="36dp"
                android:background="#54545E"
                android:layout_marginTop="6dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/app_versions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0.2"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/label_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_version"
                    android:textColor="#74747F"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/app_list"
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-16dp"
        android:layout_marginRight="12dp"
        android:layout_weight="1" />


</LinearLayout>